style.css
:root {
  --primary1: #0e402d;
  --primary2: #295135;
  --primary3: #5a6650;
  --neutral1: whitesmoke;
  --neutral2: #000000;
}

*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
}

body {
  min-height: 100vh;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

#root,
#__next {
  isolation: isolate;
}

body {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  background-color: var(--neutral1);
}

ul {
  list-style: none;
  display: flex;
  gap: 2rem;
  font-weight: 900;
  justify-content: center;
  align-items: center;
  margin: auto;
}

nav {
  color: rgb(140, 140, 140);
  display: flex;
  position: fixed;
  top: 0;
  justify-content: end;
  min-height: 40px;
  width: 100%;
  backdrop-filter: blur(20px);
  background-color: rgba(255, 255, 255, 0.005);
  box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
}

.hero {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)),
    url(Images/sebastian-unrau-sp-p7uuT0tw-unsplash.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap: 1rem;
}

.hero-text {
  font-size: 2.5rem;
  line-height: 1.25;
  color: var(--neutral1);
  font-weight: 900;
  margin-inline: 4rem;
}

p.hero-text {
  font-size: 1.5rem;
  font-weight: 500;
}

.project-btn {
  padding: 1em 2em;
  border-radius: 1em;
  font-weight: 700;
  margin-top: 1rem;
  border: none;
  box-shadow: 0px 0px 5px;
}

.project-btn:hover {
  transition: 0.125s ease;
  scale: 1.025;
  cursor: pointer;
}

.wrapper {
  margin-inline: 2rem;
  display: flex;
  flex-direction: column;
  grid-template-columns: 1fr;
  place-items: center;
  align-self: center;
  text-align: center;
  justify-content: center;
  margin: 0 auto;
}

:root {
  --gap: 4rem;
}

.project-wrapper {
  background-image: linear-gradient(
    -20deg,
    var(--neutral1),
    rgb(255 255 240),
    white
  );
  margin-inline: 2rem;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 80vh;
}
.project-header {
  font-size: 2rem;
  margin-top: var(--gap);
  margin-bottom: var(--gap);
  color: var(--neutral1);
  padding: 1rem 2rem;
  background-image: linear-gradient(
    to bottom,
    var(--primary1),
    var(--primary2)
  );
  border-radius: 1rem;
  font-weight: 700;
  max-width: 60%;
  border: var(--primary1) 3px solid;
}
.projects {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: var(--gap);
  margin-top: var(--gap);
  margin-bottom: var(--gap);
  max-width: 100%;
  margin-inline: 2rem;
}

.card {
  aspect-ratio: 1;
  border: solid 3px var(--primary1);
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: white;
  overflow: hidden;
  box-shadow: 3px 3px 10px;
  flex-basis: 400px;
  flex-wrap: wrap;
}

.card:hover {
  cursor: pointer;
  transition: 0.5s ease;
  scale: 1.1;
}

.portfolio2 > a > img {
  object-fit: cover;
  min-height: 400px;
}

.skills {
  background-color: var(--primary2);
  width: 100%;
  min-height: 100vh;
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)),
    url(Images/eugene-chystiakov-9UOF4oliKUY-unsplash.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.skills-container {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-inline: var(--gap);
}

.skills-header {
  color: var(--primary1);
  font-size: 2.75rem;
  margin-bottom: 1rem;
  font-weight: 700;
}

.frosted {
  border-radius: 1rem;
  backdrop-filter: blur(20px);
  background-color: rgba(255, 255, 255, 0.1);
  box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
  border: 1px solid rgba(255, 255, 255, 0.3);
  display: flex;
  color: var(--primary1);
  font-weight: 900;
  justify-content: center;
  align-items: center;
  box-shadow: black 5px 5px 20px;
  margin-inline: 2rem;
  padding: 2rem;
  max-width: 100%;
}

.ratings {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: white;
  width: 80%;
  border-radius: 0.5rem;
  gap: 1rem;
  padding: 2rem;
}
.bar {
  display: flex;
  width: 100%;
  background-color: gray;
  height: 10%;
  justify-content: space-between;
  border-radius: 100vw;
  align-items: center;
  box-shadow: black 3px 3px 5px;
}

.bar > span {
  margin-right: 0.7rem;
  color: white;
}

.html {
  display: flex;
  justify-content: space-between;
  width: 50%;
  background-color: #04aa6d;
  padding: 0.5rem;
  border-radius: 100vw;
  height: 100%;
  overflow: hidden;
} /* Green */
.css {
  width: 40%;
  background-color: #2196f3;
  padding: 0.5rem;
  border-radius: 100vw;
  height: 100%;
  display: flex;
  overflow: hidden;
} /* Blue */
.js {
  width: 25%;
  background-color: rgb(255, 218, 8);
  padding: 0.5rem;
  border-radius: 100vw;
  height: 100%;
  display: flex;
  overflow: hidden;
} /* Red */
.design {
  width: 30%;
  background-color: rgb(255, 85, 6);
  padding: 0.5rem;
  border-radius: 100vw;
  height: 100%;
  display: flex;
  overflow: hidden;
}

.call-to-action {
  background-color: var(--primary2);
  padding: 1.5em;
  border-radius: 1.5rem;
  margin-top: var(--gap);
  margin-bottom: var(--gap);
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

h2 {
  font-size: 1.5rem;
  color: white;
  line-height: 1;
  font-weight: 800;
}

p {
  font-weight: 700;
  line-height: 1;
}

.subscribe-btn {
  font-weight: bold;
  border: none;
  border-radius: 100vw;
  padding: 0.5em 2em;
  box-shadow: 3px 3px 10px;
  width: 100%;
  display: flex;
  justify-content: center;
}

.subscribe-btn:hover {
  cursor: pointer;
}

input {
  border: none;
  border-radius: 1rem;
  padding: 0.5rem;
  margin-top: 1rem;
  margin-bottom: 1rem;
  line-height: 1;
  width: 90%;
  box-shadow: 3px 3px 10px;
}

::placeholder {
  text-align: center;
  margin: none;
  width: 100%;
}

